# dtr

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/dtr/: scope_guard.hpp  thread_safe.hpp
include/dtr/ipc/: vector.hpp
include/dtr/math/: math.hpp
include/dtr/time/: time.hpp
test/: test.cpp
